# blinking_led_STM32

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: build.yml  compile-checks.yml
Core/Src/: main.cpp
Core/Src/Runes/: SimRunes.cpp  generated_metadata.cpp
virtual/: pyvenv.cfg
